# Skypro-2Module

./: .env.sample  .flake8  .gitignore  2module on Skypro  2module on Skypro.pub  main.py  pyproject.toml  test_delete.py  widget.py
src/: convert_currncy.py  decorators.py  external_api.py  generators.py  libraries.py  logger.py  masks.py  processing.py  reader_csv_xlsx_files.py  summ_amount.py  utils.py  widget.py
tests/: __init__.py  for_delete.py  test_decorators.py  test_for_utils.py  test_generators.py  test_masks.py  test_processing.py  test_reader_csv_xlsx_files.py  test_summ_amount.py  test_widget.py
